grocery list createdwhen a new menu is created. Able to remove an item from the grocery list

--- a/menu/planner/templates/grocery_list.html
+++ b/menu/planner/templates/grocery_list.html
@@ -65,13 +65,6 @@
             </table>     
         </div>
 
-        <p>{{groceries}}</p>
-
-        {% for item in groceries %}
-        <li><a href = '/planner/remove_grocery/{{user.city}}/{{user.state}}/{{item}}'>{{item}}</a></li>
-        {% endfor %}
-
-
         <!-- Form to add a food for the grocery list -->
         <div class="add_food">
             <h3 class="title">Add a Food</h3>
@@ -110,249 +103,12 @@
             </form>
         </div>
 
-        <!-- Displays grocery list with the option to add food to the list-->
         <h3 class="title">{{user.first_name}}'s Grocery List</h3>
-        <div class="list">
-            <div class="food">
-                <h4>Produce</h4>
-                <!-- Adds food to the list -->
-                <form action="/planner/add_grocery/{{user.city}}/{{user.state}}" method="POST">
-                    {% csrf_token %}
-                    <select id="add_grocery" name="add_grocery">
-                        <option> </option>
-                        <!-- Only displays foods within category -->
-                        {% for grocery in all_foods %}
-                            {% if grocery.category == "Produce" %}
-                                <option value={{grocery.id}}>{{grocery.name}}</option>
-                            {% endif %}
-                        {% endfor %}
-                    </select>
-                    <input type="submit" value="Add">
-                </form>
-                {% for food in produce %}
-                <ul>
-                    <!-- displays and deletes food from the list when clicked  -->
-                    <p><a href="/planner/remove_grocery/{{food.id}}/{{user.city}}/{{user.state}}">{{food.name}}</a></p>
-                </ul>
-                {% endfor %}
-            </div>
-
-            <div class="food">
-                <h4>Snacks</h4>
-                <!-- Adds food to the list -->
-                <form action="/planner/add_grocery/{{user.city}}/{{user.state}}" method="POST">
-                    {% csrf_token %}
-                    <select id="add_grocery" name="add_grocery">
-                        <option> </option>
-                        <!-- Only displays foods within category -->
-                        {% for grocery in all_foods %}
-                            {% if grocery.category == "Snacks" %}
-                                <option value={{grocery.id}}>{{grocery.name}}</option>
-                            {% endif %}
-                        {% endfor %}
-                    </select>
-                    <input type="submit" value="Add">
-                </form>
-                {% for food in snacks %}
-                <ul>
-                    <!-- displays and deletes food from the list when clicked  -->
-                    <p><a href="/planner/remove_grocery/{{food.id}}/{{user.city}}/{{user.state}}">{{food.name}}</a></p>
-                </ul>
-                {% endfor %}
-            </div>
-
-            <div class="food">
-                <h4>Bakery</h4>
-                <!-- Adds food to the list -->
-                <form action="/planner/add_grocery/{{user.city}}/{{user.state}}" method="POST">
-                    {% csrf_token %}
-                    <select id="add_grocery" name="add_grocery">
-                        <option> </option>
-                        <!-- Only displays foods within category -->
-                        {% for grocery in all_foods %}
-                            {% if grocery.category == "Bakery" %}
-                                <option value={{grocery.id}}>{{grocery.name}}</option>
-                            {% endif %}
-                        {% endfor %}
-                    </select>
-                    <input type="submit" value="Add">
-                </form>
-                {% for food in bakery %}
-                <ul>
-                    <!-- displays and deletes food from the list when clicked  -->
-                    <p><a href="/planner/remove_grocery/{{food.id}}/{{user.city}}/{{user.state}}">{{food.name}}</a></p>
-                </ul>
-                {% endfor %}
-            </div>
-
-            <div class="food">
-                <h4>International</h4>
-                <!-- Adds food to the list -->
-                <form action="/planner/add_grocery/{{user.city}}/{{user.state}}" method="POST">
-                    {% csrf_token %}
-                    <select id="add_grocery" name="add_grocery">
-                        <option> </option>
-                        <!-- Only displays foods within category -->
-                        {% for grocery in all_foods %}
-                            {% if grocery.category == "International" %}
-                                <option value={{grocery.id}}>{{grocery.name}}</option>
-                            {% endif %}
-                        {% endfor %}
-                    </select>
-                    <input type="submit" value="Add">
-                </form>
-                {% for food in intl %}
-                <ul>
-                    <!-- displays and deletes food from the list when clicked  -->
-                    <p><a href="/planner/remove_grocery/{{food.id}}/{{user.city}}/{{user.state}}">{{food.name}}</a></p>
-                </ul>
-                {% endfor %}
-            </div>
-
-            <div class="food">
-                <h4>Meat</h4>
-                <!-- Adds food to the list -->
-                <form action="/planner/add_grocery/{{user.city}}/{{user.state}}" method="POST">
-                    {% csrf_token %}
-                    <select id="add_grocery" name="add_grocery">
-                        <option> </option>
-                        <!-- Only displays foods within category -->
-                        {% for grocery in all_foods %}
-                            {% if grocery.category == "Meat" %}
-                                <option value={{grocery.id}}>{{grocery.name}}</option>
-                            {% endif %}
-                        {% endfor %}
-                    </select>
-                    <input type="submit" value="Add">
-                </form>
-                {% for food in meat %}
-                <ul>
-                    <!-- displays and deletes food from the list when clicked  -->
-                    <p><a href="/planner/remove_grocery/{{food.id}}/{{user.city}}/{{user.state}}">{{food.name}}</a></p>
-                </ul>
-                {% endfor %}
-            </div>
-
-            <div class="food">
-                <h4>Bread</h4>
-                <!-- Adds food to the list -->
-                <form action="/planner/add_grocery/{{user.city}}/{{user.state}}" method="POST">
-                    {% csrf_token %}
-                    <select id="add_grocery" name="add_grocery">
-                        <option> </option>
-                        <!-- Only displays foods within category -->
-                        {% for grocery in all_foods %}
-                            {% if grocery.category == "Bread" %}
-                                <option value={{grocery.id}}>{{grocery.name}}</option>
-                            {% endif %}
-                        {% endfor %}
-                    </select>
-                    <input type="submit" value="Add">
-                </form>
-                {% for food in bread %}
-                <ul>
-                    <!-- displays and deletes food from the list when clicked  -->
-                    <p><a href="/planner/remove_grocery/{{food.id}}/{{user.city}}/{{user.state}}">{{food.name}}</a></p>
-                </ul>
-                {% endfor %}
-            </div>
-
-            <div class="food">
-                <h4>Baking & Spices</h4>
-                <!-- Adds food to the list -->
-                <form action="/planner/add_grocery/{{user.city}}/{{user.state}}" method="POST">
-                    {% csrf_token %}
-                    <select id="add_grocery" name="add_grocery">
-                        <option> </option>
-                        <!-- Only displays foods within category -->
-                        {% for grocery in all_foods %}
-                            {% if grocery.category == "Baking & Spices" %}
-                                <option value={{grocery.id}}>{{grocery.name}}</option>
-                            {% endif %}
-                        {% endfor %}
-                    </select>
-                    <input type="submit" value="Add">
-                </form>
-                {% for food in bake_spice %}
-                <ul>
-                    <!-- displays and deletes food from the list when clicked  -->
-                    <p><a href="/planner/remove_grocery/{{food.id}}/{{user.city}}/{{user.state}}">{{food.name}}</a></p>
-                </ul>
-                {% endfor %}
-            </div>
-
-            <div class="food">
-                <h4>Frozen</h4>
-                <!-- Adds food to the list -->
-                <form action="/planner/add_grocery/{{user.city}}/{{user.state}}" method="POST">
-                    {% csrf_token %}
-                    <select id="add_grocery" name="add_grocery">
-                        <option> </option>
-                        <!-- Only displays foods within category -->
-                        {% for grocery in all_foods %}
-                            {% if grocery.category == "Frozen" %}
-                                <option value={{grocery.id}}>{{grocery.name}}</option>
-                            {% endif %}
-                        {% endfor %}
-                    </select>
-                    <input type="submit" value="Add">
-                </form>
-                {% for food in frozen %}
-                <ul>
-                    <!-- displays and deletes food from the list when clicked  -->
-                    <p><a href="/planner/remove_grocery/{{food.id}}/{{user.city}}/{{user.state}}">{{food.name}}</a></p>
-                </ul>
-                {% endfor %}
-            </div>
-
-            <div class="food">
-                <h4>Dairy</h4>
-                <!-- Adds food to the list -->
-                <form action="/planner/add_grocery/{{user.city}}/{{user.state}}" method="POST">
-                    {% csrf_token %}
-                    <select id="add_grocery" name="add_grocery">
-                        <option> </option>
-                        <!-- Only displays foods within category -->
-                        {% for grocery in all_foods %}
-                            {% if grocery.category == "Dairy" %}
-                                <option value={{grocery.id}}>{{grocery.name}}</option>
-                            {% endif %}
-                        {% endfor %}
-                    </select>
-                    <input type="submit" value="Add">
-                </form>
-                {% for food in dairy %}
-                <ul>
-                    <!-- displays and deletes food from the list when clicked  -->
-                    <p><a href="/planner/remove_grocery/{{food.id}}/{{user.city}}/{{user.state}}">{{food.name}}</a></p>
-                </ul>
-                {% endfor %}
-            </div>
-
-            <div class="food">
-                <h4>Other</h4>
-                <!-- Adds food to the list -->
-                <form action="/planner/add_grocery/{{user.city}}/{{user.state}}" method="POST">
-                    {% csrf_token %}
-                    <select id="add_grocery" name="add_grocery">
-                        <option> </option>
-                        <!-- Only displays foods within category -->
-                        {% for grocery in all_foods %}
-                            {% if grocery.category == "Other" %}
-                                <option value={{grocery.id}}>{{grocery.name}}</option>
-                            {% endif %}
-                        {% endfor %}
-                    </select>
-                    <input type="submit" value="Add">
-                </form>
-                {% for food in other %}
-                <ul>
-                    <!-- displays and deletes food from the list when clicked  -->
-                    <p><a href="/planner/remove_grocery/{{food.id}}/{{user.city}}/{{user.state}}">{{food.name}}</a></p>
-                </ul>
-                {% endfor %}
-            </div>
-        </div>
+        <ul class = groceiries>
+            {% for item in groceries %}
+                <li><a href = '/planner/remove_grocery/{{user.city}}/{{user.state}}/{{item}}'>{{item}}</a></li>
+            {% endfor %}
+        </ul>
         
         <!-- Using Google Maps API, displays local grocery stores based on user's city and state -->
         <h1>Grocery Stores Near {{user.city}},{{user.state}}</h1>
