able to unlike a recipe a user has favorited

--- a/menu/planner/templates/favorite_recipes.html
+++ b/menu/planner/templates/favorite_recipes.html
@@ -72,6 +72,7 @@
                 <p>{{recipe.description}}</p>
                 <!-- Link to view recipe -->
                 <a href="/planner/recipe_info/{{recipe.id}}">View Recipe</a> 
+                <button class="unlike" onclick='location.href="/planner/remove_favorite/{{recipe.id}}"'>Unlike</button>
         </div>
         {% endfor %}
     </div>
