--- a/menu/planner/templates/favorite_recipes.html
+++ b/menu/planner/templates/favorite_recipes.html
@@ -69,10 +69,11 @@
         {% for recipe in user.liked.all %}
         <div class="recipe">
                 <h4>{{recipe.title}}</h4>
+                <!-- unlike button allows user to remove a recipe from their favorites -->
+                <button class="unlike" onclick='location.href="/planner/remove_favorite/{{recipe.id}}"'>Unlike</button>
                 <p>{{recipe.description}}</p>
                 <!-- Link to view recipe -->
                 <a href="/planner/recipe_info/{{recipe.id}}">View Recipe</a> 
-                <button class="unlike" onclick='location.href="/planner/remove_favorite/{{recipe.id}}"'>Unlike</button>
         </div>
         {% endfor %}
     </div>
