--- a/menu/planner/templates/edit_recipe.html
+++ b/menu/planner/templates/edit_recipe.html
@@ -58,9 +58,9 @@
 
                 <!-- *** needs commas between ingredients and directions *** -->
                 <label for='new_ingredients'>Ingredients:</label>
-                <textarea id='new_ingredients' name='new_ingredients' cols="24" rows="5">{% for character in recipe.ingredients %}{% if character != '[' and character != "'" and character != ']'%}{% if character == ',' %}{% else %}{{character}}{% endif %}{% endif %}{% endfor %}</textarea>
+                <textarea id='new_ingredients' name='new_ingredients' cols="24" rows="5">{% for ing in ingredients %}{{ing}}{% endfor %}</textarea>
                 <label for='new_directions'>Directions:</label>
-                <textarea type='text' id='new_directions' name='new_directions' cols="23" rows="15">{% for character in recipe.directions %}{% if character != '[' and character != "'" and character != ']'%}{% if character == ',' %}{% else %}{{character}}{% endif %}{% endif %}{% endfor %}</textarea>
+                <textarea type='text' id='new_directions' name='new_directions' cols="23" rows="15">{% for direct in directions %}{{direct}}{% endfor %}</textarea>
 
                 <input type='submit' value = "Update">
             </form>
