--- a/menu/planner/static/css/create_menu.css
+++ b/menu/planner/static/css/create_menu.css
@@ -42,7 +42,7 @@ a{
 
 .home{
     margin-right: 30px;
-    margin-left: 44%;
+    margin-left: 47%;
     margin-top: 10px;
 }
 
@@ -91,5 +91,12 @@ h4{
     width: 250px;
     padding:15px;
     margin-left: 39%;
+}
 
+.week{
+    border-style: solid;
+    height: auto;
+    padding: 5px;
+    width: 1000px;
+    margin-left: 115px;
 }
